--- a/Unit01-Bed_and_Breakfast/css/styles.css
+++ b/Unit01-Bed_and_Breakfast/css/styles.css
@@ -4,12 +4,14 @@
 
 body {
     font-family: 'Muli', sans-serif;
+   
 }
 
 #wrapper {
     min-width: 320px;
     max-width: 1140px;
     margin: auto;
+    background-color: #F2F7FF; 
 }
 
 #header {
@@ -41,6 +43,7 @@ div.transbox h2 {
     padding-left: 2em;
     margin: 0;
     padding-bottom: .5em;
+    font-style: italic;
 }
 
 #content {
@@ -49,6 +52,7 @@ div.transbox h2 {
     padding-right: 2em;
     padding-bottom: 2em;
     color: #333333;
+    background-color: #F2F7FF; 
 }
 
 p {
