--- a/Capstone/css/styles.css
+++ b/Capstone/css/styles.css
@@ -3,7 +3,7 @@
 /* CSS Document */
 
 body {
-    font-family: 'Muli', sans-serif;
+    font-family: 'Play', sans-serif;
     background: url("../images/bg.png") repeat;
 }
 
@@ -29,6 +29,7 @@ body {
 .mainContent {
     background-color: #1f1f1f;
     min-height: 200px;
+    padding-top: 30px;
 }
 
 .wordArea{
@@ -43,8 +44,8 @@ body {
 
 .container.wordTiles {
     background-color: #383838;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 #health{
@@ -56,7 +57,8 @@ body {
 #playerHealth{
     font-weight: 700;
     font-size: 20px;
-    color: white;  
+    color: white;
+    padding-top: 10px;  
 }
 
 .tile{
@@ -68,6 +70,7 @@ body {
     margin: 5px;
     float: left;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .tile.correct{
@@ -101,9 +104,32 @@ body {
     color: white;
 }
 
+
+.messageTextContainer{
+    background-color: black;
+    opacity: 0;
+    position: absolute;
+     top: 0px; 
+    left: 100px;
+    width: 700px;
+    height: 295px;
+    border-radius: 20px;
+}
+
+#messageText{
+    color: white;
+    opacity: 0;
+    position: absolute;
+    top: 70px;
+    left: 340px;
+    font-size: 60px;
+
+}
+
 #stageBackground{
     border-radius: 20px;
     max-width: 700px;
+
 }
 
 #enemy{
